@@ -58,7 +58,9 @@
 - Added videoversion and videoversiontype tables to CSV export
 - Added logging of Kodi version detected to KS Cleaner logger
 - Added videoversion table to the video database analyzer
-- Added repairing of missing music database triggers for SQL.  Previously only detection was supported.
+- Added repairing of missing triggers for MySQL music databases.  Previously only detection was supported.
+- Added CSV export for video database tag and tag_link tables
+- Fixed MySQL default database names from all lower case to proper case
 
   
 
